--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 
 code {
   padding: 2px 6px;
+  margin: 0 2px;
   color: crimson;
   background: #ff000022;
   border-radius: 4px;
@@ -13,4 +14,5 @@ code {
 
 .action {
   color: dodgerblue;
+  cursor: pointer;
 }
