--- a/src/style.css
+++ b/src/style.css
@@ -4,13 +4,7 @@ body {
   font-family: "SF Pro", Roboto, sans-serif;
 }
 
-code {
-  padding: 2px 6px;
-  color: crimson;
-  background: #ff000022;
-  border-radius: 4px;
-}
-
 .action {
   color: dodgerblue;
+  cursor: pointer;
 }
