--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,22 @@
 body {
   margin: 0;
-  padding: 16px;
+  padding: 0;
   font-family: "SF Pro", Roboto, sans-serif;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+
+iframe {
+  flex: 1 0 0;
+  border: none;
 }
 
 .action {
   color: dodgerblue;
   cursor: pointer;
+  padding: 0 16px;
+  box-sizing: border-box;
 }
