--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 body {
   margin: 0;
-  padding: 16px;
+  padding: 0;
   font-family: "SF Pro", Roboto, sans-serif;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
 }
 
-code {
-  padding: 2px 6px;
-  margin: 0 2px;
-  color: crimson;
-  background: #ff000022;
-  border-radius: 4px;
+iframe {
+  flex: 1 0 0;
+  border: none;
 }
 
 .action {
   color: dodgerblue;
   cursor: pointer;
+  padding: 0 16px;
+  box-sizing: border-box;
 }
