Add a button to call web_app_secure_storage_save_key

--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,7 @@ iframe {
 .action {
   color: dodgerblue;
   cursor: pointer;
-  padding: 0 16px;
+  padding: 8px;
+  margin: 0;
   box-sizing: border-box;
 }
