--- a/src/style.css
+++ b/src/style.css
@@ -4,9 +4,16 @@ body {
   font-family: "SF Pro", Roboto, sans-serif;
   height: 100vh;
   width: 100vw;
+  box-sizing: border-box;
+  background: white;
+  color: black;
+}
+
+.page {
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  box-sizing: border-box;
 }
 
 iframe {
@@ -20,4 +27,21 @@ iframe {
   padding: 8px;
   margin: 0;
   box-sizing: border-box;
+}
+
+.input-container {
+  padding: 8px;
+}
+
+.fixed {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100px;
+  background: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
